empezando de cero

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -386,8 +386,7 @@
 
 .container-principal .index .carrito:hover {
   cursor: pointer;
-  color: #b61928;
-  font-size: 35px; }
+  color: #b61928;}
 
 .container-principal .content-home {
   margin: 0 auto; }
