traduci la pagina a ingles

--- a/views/productos.html
+++ b/views/productos.html
@@ -13,7 +13,7 @@
         content="Todos los Libros que necesitas/buscas, en un solo lugar. Envios gratis en pedidos mayores a $3000. Recibi tu pedido en tu casa sin demoras.">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Compra LIBROS en Atenas</title>
+    <title>Atenas-BookStore</title>
 </head>
 
 <body>
@@ -31,26 +31,26 @@
                         <div class="collapse navbar-collapse" id="navbarNav">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a class="nav-link active " aria-current="page" href="../index.html">Inicio</a>
+                                    <a class="nav-link active " aria-current="page" href="../index.html">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="libros nav-link active" href="./productos.html">Libros</a>
+                                    <a class="libros nav-link active" href="./productos.html">Books</a>
 
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="./editorial.html">Editorial</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="./contact.html">Contactanos</a>
+                                    <a class="nav-link" href="./contact.html">Contact</a>
                                 </li>
                             </ul>
                         </div>
                         <nav class="navbar navbar-light ">
                             <div class="container-fluid">
                                 <form class="d-flex">
-                                    <input class="form-control me-2" type="search" placeholder="Buscar"
+                                    <input class="form-control me-2" type="search" placeholder="Search your book"
                                         aria-label="Search">
-                                    <button class="btn btn-outline-success" type="submit">Buscar</button>
+                                    <button class="btn btn-outline-success" type="submit">Search</button>
                                 </form>
                             </div>
                         </nav>
@@ -64,9 +64,9 @@
             <nav class="bread-libros">
                 <ul class="bread-lista">
                     <li class="bread-lista__item"><a class="bread__link bread__link--back" href="../index.html"><i
-                                class="fas fa-long-arrow-alt-left"></i> Inicio</a>
+                                class="fas fa-long-arrow-alt-left"></i> Home</a>
                     </li>
-                    <li class="bread-lista__item"><a class="bread__link bread__link--red" href="#"> Libros</a>
+                    <li class="bread-lista__item"><a class="bread__link bread__link--red" href="#"> Books</a>
                     </li>
                 </ul>
             </nav>
@@ -75,19 +75,18 @@
 
     <main>
         <div class="hero container-fluid">
-            <h1>Escoge el genero</h1>
-            <p>Te recomendamos seleccionar la categoria de <strong>Libro</strong> que te interese para facilitar tu
-                búsqueda.</p>
+            <h1>Choose category</h1>
+            <p>we recommend you to choose your favourite<strong>book</strong> category.</p>
         </div>
 
 
         <!-- filtros -->
         <div class="container navbar-filtros">
             <div class="generos__filtros">
-                <a href="./fantasia.html">Fantasía</a>
-                <a href="./ficcion.html">Ficción</a>
+                <a href="./fantasia.html">Fantasy</a>
+                <a href="./ficcion.html">Fiction</a>
                 <a href="./terror.html">Terror</a>
-                <a href="./romantico.html">Romantico</a>
+                <a href="./romantico.html">Romance</a>
             </div>
         </div>
 
@@ -349,7 +348,7 @@
     <footer class="container-fluid">
         <div class="row">
             <div class="footer-social col col-sm-12 col-md-6 col-lg-3">
-                <h3>Redes Sociales</h3>
+                <h3>Social Media</h3>
                 <a href="#"><i class="fab fa-instagram"></i></a>
                 <a href="#"><i class="fab fa-twitter"></i></a>
                 <a href="#"><i class="fab fa-pinterest"></i></a>
@@ -357,32 +356,32 @@
             </div>
 
             <ul class="footer-list col col-sm-12 col-md-6 col-lg-3">
-                <h3>Navegacion</h3>
+                <h3>Navegation</h3>
                 <li>
-                    <a href="./index.html">Inicio</a>
+                    <a href="./index.html">Home</a>
                 </li>
                 <li>
                     <a href="./editorial.html">Editorial</a>
                 </li>
                 <li>
-                    <a href="./productos.html">Libros</a>
+                    <a href="./productos.html">Books</a>
                 </li>
                 <li>
-                    <a href="#">Informacion</a>
+                    <a href="#">Information</a>
                 </li>
                 <li>
-                    <a href="./contact.html">Contactanos</a>
+                    <a href="./contact.html">Contact</a>
                 </li>
             </ul>
             <ul class="libros-footer col col-sm-12 col-md-6 col-lg-3">
-                <h3>Libros</h3>
-                <li>Ficcion</li>
-                <li>Fantasia</li>
+                <h3>Books</h3>
+                <li>Fiction</li>
+                <li>Fantasy</li>
                 <li>Romance</li>
                 <li>Terror</li>
             </ul>
             <ul class="editoriales-footer col col-sm-12 col-md-6 col-lg-3">
-                <h3>Editoriales</h3>
+                <h3>Editorial</h3>
                 <li>Salamandra</li>
                 <li>Hidra Editorial</li>
                 <li>Naranja</li>
@@ -391,7 +390,7 @@
             </ul>
             <div class="row fila-copy-footer">
                 <p class="copyright col col-sm-12 col-md-12 col-lg-12">
-                    Copyright © Editoriales mencionadas
+                    Copyright © previous Editorials
                 </p>
             </div>
         </div>
