--- a/views/productos.html
+++ b/views/productos.html
@@ -55,7 +55,7 @@
                             </div>
                         </nav>
                         <a data-bs-target="#modalCart" data-bs-toggle="modal" ><i class="carrito fab fa-shopify"></i></a>
-                        <a class="mx-3 text-success" type="button" data-bs-target="#accountModal" data-bs-toggle="modal"><i class="fas fa-user"></i></button>
+                        <button class="mx-3 btn" type="button" data-bs-target="#accountModal" data-bs-toggle="modal"><i class="fas fa-user"></i></button>
                     </div>
                 </nav>
             </div>
@@ -77,7 +77,7 @@
     <main>
         <div class="hero container-fluid">
             <h1>Choose category</h1>
-            <p>we recommend you to choose your favourite<strong>book</strong> category.</p>
+            <p>we recommend you to choose your favourite <strong>book</strong> category.</p>
         </div>
 
         <!-- modal account -->
@@ -107,7 +107,7 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                        <div class="cart-container d-flex"></div>
+                        <div class="cart-container"></div>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-danger">Restore</button>
