terminando arreglos, queda hacer func filt

--- a/views/productos.html
+++ b/views/productos.html
@@ -133,18 +133,18 @@
         <!-- filtros -->
         <div class="container navbar-filtros">
             <div class="generos__filtros">
-                <a>Fantasy</a>
-                <a>Fiction</a>
-                <a>Terror</a>
-                <a>Romance</a>
+                <a class="cateFilt" data-category="fantasy">Fantasy</a>
+                <a class="cateFilt" data-category="fiction">Fiction</a>
+                <a class="cateFilt" data-category="terror">Terror</a>
+                <a class="cateFilt" data-category="romance">Romance</a>
             </div>
         </div>
 
         <!-- productos -->
         <div class="container container-main-libros">
             <!-- row -->
+            <div class="filterNames"></div>
             <div class="row content__cards">
-
             </div>
         </div>
     </main>
