--- a/views/productos.html
+++ b/views/productos.html
@@ -143,7 +143,7 @@
         <!-- productos -->
         <div class="container container-main-libros">
             <!-- row -->
-            <div class="filterNames"></div>
+            <div class="row filterNames"></div>
             <div class="row content__cards">
             </div>
         </div>
